# Data-Science-Course-spring2025

./: README.md
.github/workflows/: pipeline.yml
CA-0/: bonus_question.md  p1.ipynb  p2.ipynb  q3.ipynb
CA-1/: Book1.twb  q1.ipynb  q1_plus_bonus.ipynb
CA-2/: Dockerfile  README.md  darooghe_pulse.py  docker-compose-dev.yaml  kafka_consumer.py  notebook.ipynb
CA-3/BikeRentalPrediction/: notebook.ipynb  regression-dataset-test-unlabeled.csv  regression_predictions.csv
CA-3/CancerPrediction/: CancerPrediction.html  CancerPrediction.ipynb  CancerPredictionBest.ipynb  CancerPredictionBestModel.ipynb  CatBoost_best_model.pkl  LightGBM_best_model.pkl  XGBoost_best_model.pkl  ensemble_result_try2.csv  result.csv  result_try.csv
CA-3/CancerPrediction/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
CA-3/CancerPrediction/to upload/: CancerPredictionBestModelTry.ipynb
CA-3/Recommender System/: 3.ipynb  P3.ipynb  predictions.csv  social_mf.pth  train_data_movie_rate.csv  xgb.ipynb
CA-4/: bonus.md
CA-4/task1/: best_model.pth  matches.ipynb
CA-4/task2/: CA4_p2.ipynb
CA-4/task3/: notebook.ipynb
CA-5-6/: Task2.ipynb  Task3.ipynb
CA-5-6/Task1/: task1.ipynb
CA5&6/: CA5&6_P4 (1).ipynb
Main Project/Phase3/: LSTM.ipynb  Phase3.ipynb  Transformer.ipynb  mlflow.ipynb  pretrained.ipynb  train_pipeline (1).ipynb  train_pipeline.ipynb
Main Project/Phase3/scripts/: load_training_data.py  pyproject.toml  run_pipeline.py  setup.py  test.py  train_model.py
Main Project/Project_P2_810100258_810100260_810199383/: pipeline.py  requirements.txt
(+21 files in other folders)
