[tool.poetry]
name = "llama-finetuner"
version = "0.1.0"
description = "LLaMA fine-tuning pipeline"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "llama_finetuner"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
protobuf = "3.20.3"
trl = "0.8.6"
transformers = ">=4.41.0"
peft = ">=0.10.0"
huggingface-hub = ">=0.22.0"
accelerate = ">=0.29.0"

# Mark these as optional to prevent Poetry from managing them
torch = { version = "*", optional = true }
unsloth = { version = "*", optional = true }

[tool.poetry.group.dev.dependencies]
ipython = "^8.0"
pytest = "^7.0"
black = "^23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"